Fix summary text overflow

--- a/src/main/resources/view/LightTheme.css
+++ b/src/main/resources/view/LightTheme.css
@@ -372,5 +372,7 @@
     -fx-font-family: "Open Sans Regular";
     -fx-font-size: 14pt;
     -fx-text-fill: black;
+    -fx-wrap-text: true;
+    -fx-text-alignment: center;
 }
 
